[package]
name = "knowt"
version = "0.3.2"
authors = ["Baz <github(a)luxolus.com>"]

[dependencies]
yaml-rust = "0.4.0"
serde_yaml = "0.7.5"
rocket = "0.3.16"
rocket_codegen = "0.3.16"
rocket_contrib = {version = "0.3.16", default-features = false, features = ["json"]}
config = "0.9.0"
serde = "1.0.75"
serde_derive  = "1.0.75"
serde_json = "1.0.26"
lazy_static = "1.1.0"
failure = "0.1.2"
walkdir = "2.2.5"