[package]
name = "knowt"
version = "0.4.3"
authors = ["Baz <github(a)luxolus.com>"]

[dependencies]
yaml-rust = "0.4.2"
serde_yaml = "0.8.6"
rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_contrib = {version = "0.3.17", default-features = false, features = ["json"]}
config = "0.9.1"
serde = "1.0.80"
serde_derive  = "1.0.80"
serde_json = "1.0.32"
lazy_static = "1.1.0"
failure = "0.1.2"
walkdir = "2.2.5"
clap = "~2.32.0"
toml = "0.4.9"