[package]
name = "knowt"
version = "0.5.0"
authors = ["Baz <github(a)luxolus.com>"]
edition = "2018"

[dependencies]
yaml-rust = "0.4.2"
serde_yaml = "0.8.8"
rocket = "0.4.0"
rocket_contrib = {version = "0.4.0", default-features = false, features = ["json"]}
config = "0.9.1"
serde = "1.0.84"
serde_derive  = "1.0.84"
serde_json = "1.0.34"
lazy_static = "1.2.0"
failure = "0.1.4"
walkdir = "2.2.7"
clap = "~2.32.0"
toml = "0.4.10"